worked on the desktop and laptop size fixing all the needed alignments. the scroll on click is functions properly, the animation for the carousel is working throughout the pages wit 5s delay, need to work on different media querry and add the contact page using a modal.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ body {
 .hero-img {
     position: absolute;
     width: 55%;
-    height: 115vh;
+    height: 106vh;
     top: 0;
     right: 0;
     bottom: 0;
@@ -54,8 +54,8 @@ header {
 
 .navbar {
     font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
+    font-size: 16px;
+    font-weight: 300;
     text-transform: uppercase;
     width: 100%;
 }
@@ -68,7 +68,7 @@ header {
     display: inline-block;
     align-items: center;
     justify-content: center;
-    padding: 0px 13px;
+    padding: 0px 8px;
 }
 
 .nav-links .nav-items {
@@ -133,7 +133,7 @@ header {
 
 /* main content on the home page */
 .card-body {
-    background-color: rgba(38, 38, 38, 0.842);
+    background: linear-gradient(353deg, rgba(196,196,196,0.4) 11%, rgba(55,55,55,1) 73%);
     position: absolute;
     top: 100px;
     left: 0;
@@ -157,8 +157,8 @@ header {
 }
 
 .card {
-    min-width: 68vw;
-    top: 80px;
+    min-width: 75vw;
+    top: 10px;
     right: 110px;
     border: none;
 }
@@ -176,7 +176,7 @@ header {
     letter-spacing: 2px;
     word-spacing: 2px;
     text-align: center;
-    color: rgba(194, 194, 194, 1);
+    color: rgb(253, 253, 253);
     margin-top: 0;
 }
 
@@ -190,7 +190,18 @@ header {
 span {
     color: rgba(255, 153, 0, 1);
 }
-
+.cont-reading {
+    text-decoration: none;
+    transition: all 0.4s ease-in;
+}
+.cont-reading:hover{
+    text-decoration: none;
+    color: rgba(255, 153, 0, 0.753);
+    border: 1px solid rgb(170, 170, 170);
+    border-radius: 20px;
+    width: 30px;
+    box-shadow: 2px -2px 10px rgba(0, 0, 0, 0.842);
+}
 #planBtn {
     left: 100px;
     bottom: 0;
@@ -218,19 +229,24 @@ span {
 }
 
 /* attraction scroll down page  */
+.main-section {
+    height: 200vh;
+    width: 100%;
+    position: relative;
+    top: 544px;
+}
 
 
 #attraction, #plan {
+    position: relative;
     flex-direction: column;
     margin-top: 0;
-    width: 80%;
-    min-height: 100vh;
+    width: 80%; 
 }
 
 .att-title {
     color: rgba(194, 194, 194, 1);
     position: absolute;
-    top: 650px;
     left: 100px;
     font-size: 1.5em;
     font-weight: 600;
@@ -240,7 +256,7 @@ span {
 
 .att-line {
     position: absolute;
-    top: 685px;
+    top: 50px;
     left: 100px;
     width: 100px;
     height: 3px;
@@ -250,14 +266,13 @@ span {
 
 .carousel {
     position: absolute;
-    top: 790px;
+    top: 100px;
     left: 200px;
     right: 0;
-    min-height: 20vh;
+    min-height: 40vh;
 }
 .carousel-indicators {
     position: absolute;
-    top: 600px;
     right: 0;
     bottom: 0;
     left: 0;
@@ -277,7 +292,7 @@ span {
     font-size: 2em;
 }
 
-.btn-carousel {
+#btn-carousel {
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -288,7 +303,7 @@ span {
     margin-bottom: 0px;
     margin-right: 10px;
 }
-.btn-carousel:hover {
+#btn-carousel:hover {
     box-shadow: 5px 5px 10px rgba(194, 194, 194, 1);
 }
 .prevbtn {
@@ -317,15 +332,15 @@ span {
 
 /* plan scroll down page */
 #plan {
-    margin-top: 40px;
     width: 100%;
 }
 
 .plan-title {
     color: rgba(194, 194, 194, 1);
     position: absolute;
-    top: 800px;
+    top: 0;
     left: 100px;
+    margin-top: 0;
     font-weight: 600;
     font-size: 1.5em;
     text-transform: uppercase;
@@ -334,7 +349,7 @@ span {
 
 .plan-line {
     position: absolute;
-    top: 835px;
+    top: 40px;
     left: 100px;
     width: 30px;
     height: 3px;
@@ -343,20 +358,22 @@ span {
 }
 /* maps */
 #map {
-    width: 50%;
+    width: 90%;
     height: 50vh;
-    border: 2px solid black;
-    top: 900px;
+    border: 2px solid rgb(92, 92, 92);
+    border-radius: 20px;
+    box-shadow: 3px -3px 10px rgba(194, 194, 194, 1);
+    top: 70px;
     position: absolute;
-    left: 100px;
+    left: 200px;
+    
 }
 
 /* Social Media */
-
 .social-title {
     color: rgba(194, 194, 194, 1);
     position: absolute;
-    top: 750px;
+    top: 550px;
     left: 100px;
     font-weight: 600;
     font-size: 1.5em;
@@ -366,7 +383,7 @@ span {
 
 .social-line {
     position: absolute;
-    top: 795px;
+    top: 595px;
     left: 100px;
     width: 30px;
     height: 3px;
@@ -376,7 +393,7 @@ span {
 
 .socialmedialinks {
     position: absolute;
-    top: 825px;
+    top: 625px;
     left: 100px;
     width: 300px;
     height: 100px;
@@ -391,28 +408,32 @@ span {
 }
 
 .socialmedialinks li a img {
-    width: 32px;
-    height: 32px;
+    width: 52px;
+    height: 52px;
     margin-right: 5px;
-}
-.socialmedialinks li a {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
+    border-radius: 30%;
     text-align: center;
     background-color: rgba(194, 194, 194, 1);
     transition: all 0.5s ease-in;
-    
 }
 
-.socialmedialinks li a:hover {
+
+.socialmedialinks li a img:hover {
     background-color: rgba(255, 153, 0, 1);
+    border: 3px solid rgba(2, 2, 2, 0.794);
+    box-shadow: 2px -2px 5px rgba(194, 194, 194, 1);
+}
+
+a:active {
+    background-color: rgba(255, 153, 0, 1);
+    border: 3px solid rgba(2, 2, 2, 0.794);
+    box-shadow: 2px -2px 5px rgba(194, 194, 194, 1);
 }
 
 .copyright {
     color: rgba(194, 194, 194, 1);
     position: absolute;
-    top: 900px;
+    top: 720px;
     left: 100px;
     font-size: 0.8em;
     margin-top: 0;
